--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body.light-mode {
 }
 
 body::-webkit-scrollbar {
-  width: 2px;
+  width: 3px;
 }
 
 body::-webkit-scrollbar-track {
@@ -49,11 +49,24 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background-color: white;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
 body::-webkit-scrollbar-thumb:hover {
   background-color: #ccc;
+}
+
+body.light-mode::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+body.light-mode::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0);
+  border-radius: 4px;
+}
+
+body.light-mode::-webkit-scrollbar-thumb:hover {
+  background-color: #000000;
 }
 
 nav {
