--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 60px;
+  scroll-padding-top: 80px;
   overflow-x: hidden;
   max-width: 100vw;
 }
 
+#home-point {
+    scroll-margin-top: 200px;
+}
+
+#about-point {
+    scroll-margin-top: -50px;
+}
+
+#projects {
+    scroll-margin-top: 50px;
+}
+
+#contact {
+    scroll-margin-top: 10px;
+}
 :root {
   --bg: #0c0b0a;
   --bg-pattern: radial-gradient(#423f3f 1px, transparent 1px);
