--- a/style.css
+++ b/style.css
@@ -39,19 +39,17 @@ body {
   background-size: 20px 20px;
   color: var(--text);
   transition: background 0.3s, color 0.3s;
-}
-
-body.light-mode {
-  --bg: #f5f5f5;
-  --bg-pattern: radial-gradient(#adadad 1px, transparent 1px);
-  --text: #000000;
-  --accent: gold;
+  
 }
 
 body.light-mode {
     background-color: #ffffff;
     background-image: radial-gradient(#adadad 1px, transparent 1px);
     color: #000000;
+    --bg: #f5f5f5;
+    --bg-pattern: radial-gradient(#adadad 1px, transparent 1px);
+    --text: #000000;
+    --accent: gold;
 }
 
 body::-webkit-scrollbar {
@@ -483,6 +481,7 @@ body.light-mode .mobile-menu {
     color: white;
     font-style: italic;
     margin: 0;
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.253);
 }
 
 #subtextJunior{
@@ -620,6 +619,7 @@ body.light-mode .heroContainer::before {
 
 body.light-mode #heroTitle {
     color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.26);
 }
 
 body.light-mode #subtextJunior{
@@ -1453,6 +1453,7 @@ body.light-mode .airplane{
         grid-template-areas: 
             "name"
             "pic"
+            "tech"
             "desc";
         gap: 20px;
         margin-bottom: 60px;
